--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://hanyu.cool/techblog/"
 languageCode = "zh-cn"
-title = "韩西瓜 | 我要喝啤酒 "
+title = "韩西瓜 | 我要喝啤酒啊 "
 theme = "KeepIt-master"
 summaryLength = 70
 hasCJKLanguage = true
