--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ paginate = 6
   
     since = 2021
     author = "韩西瓜"               # Author's name
-    subtitle = "嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」,期待和你遇见呀"       # Subtitle
+    subtitle = "嘿，朋友，我是韩西瓜，一名Developer，目前就职于腾讯，欢迎关注公众号「韩西瓜」，期待和你遇见呀"       # Subtitle
     cdn_url = ""           # Base CDN URL
     home_mode = "post" # post or other
 
