--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://hanyu.cool/techblog/"
 languageCode = "zh-cn"
-title = " 韩西瓜 "
+title = " 韩西瓜 | 开心 "
 theme = "KeepIt-master"
 summaryLength = 70
 hasCJKLanguage = true
@@ -28,6 +28,7 @@ paginate = 6
 
 
 [params]
+  masterURL = "https://hanyu.cool/"
 
   dateform        = "Jan 2, 2006"
   dateformShort   = "Jan 2"
